--- a/src/app/pages/rover-redesign/sections/banner.scss
+++ b/src/app/pages/rover-redesign/sections/banner.scss
@@ -7,6 +7,8 @@
     }
 
     .top-right {
+        background-color: ui-color(footer-bg);
+        color: text-color(white);
         position: absolute;
         right: 4rem;
         top: 4rem;
