--- a/src/app/pages/rover-redesign/sections/banner.html
+++ b/src/app/pages/rover-redesign/sections/banner.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <a class="btn top-right" href="{model.accessLink}">{model.accessText}</a>
+    <a class="btn top-right small" href="{model.accessLink}">{model.accessText}</a>
     <div class="boxed">
         <picture>
             <source media="(max-width: 37.5em)" srcset="{model.mobileHeaderImage}">
