--- a/src/app/pages/rover-by-openstax/sections/lms.scss
+++ b/src/app/pages/rover-by-openstax/sections/lms.scss
@@ -1,10 +1,10 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-.rover-redesign #lms {
+.rover-by-openstax #lms {
     padding-top: 0;
 
     .bottom-border {
-        background-image: url('/images/rover-redesign/bg-4.svg');
+        background-image: url('/images/rover-by-openstax/bg-4.svg');
         height: calc(6rem + 11vw);
         margin-bottom: calc(-15rem - 11vw);
     }
