--- a/src/app/pages/rover-by-openstax/sections/video.scss
+++ b/src/app/pages/rover-by-openstax/sections/video.scss
@@ -1,6 +1,6 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-.rover-redesign #video {
+.rover-by-openstax #video {
     .text-left-video-right {
         display: grid;
         min-height: 40rem;
@@ -29,7 +29,7 @@
 
     .top-border,
     .bottom-border {
-        background-image: url('/images/rover-redesign/bg-2.svg');
+        background-image: url('/images/rover-by-openstax/bg-2.svg');
     }
 
     .top-border {
