--- a/src/app/pages/rover-by-openstax/sections/banner.scss
+++ b/src/app/pages/rover-by-openstax/sections/banner.scss
@@ -1,6 +1,6 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-.rover-redesign #banner {
+.rover-by-openstax #banner {
     picture,
     picture img {
         max-width: 100%;
