--- a/src/app/pages/rover-by-openstax/sections/faq.scss
+++ b/src/app/pages/rover-by-openstax/sections/faq.scss
@@ -1,8 +1,8 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-.rover-redesign #faq {
+.rover-by-openstax #faq {
     .top-border {
-        background-image: url('/images/rover-redesign/bg-7.svg');
+        background-image: url('/images/rover-by-openstax/bg-7.svg');
         height: calc(6rem + 11vw);
         margin-top: calc(-15.9rem - 11vw);
     }
