--- a/src/app/pages/rover-by-openstax/sections/getting-started.scss
+++ b/src/app/pages/rover-by-openstax/sections/getting-started.scss
@@ -1,6 +1,6 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-.rover-redesign #getting-started {
+.rover-by-openstax #getting-started {
     padding: calc(4rem + 10vw) 0;
     position: relative;
 
