--- a/src/app/pages/rover-by-openstax/sections/meet-rover.scss
+++ b/src/app/pages/rover-by-openstax/sections/meet-rover.scss
@@ -1,8 +1,8 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-.rover-redesign #meet-rover {
+.rover-by-openstax #meet-rover {
     background-color: ui-color(black);
-    background-image: url('/images/rover-redesign/bg-3-tile.jpg');
+    background-image: url('/images/rover-by-openstax/bg-3-tile.jpg');
     background-repeat: repeat;
     background-size: auto;
     color: text-color(white);
