--- a/src/app/pages/rover-by-openstax/sections/lms.html
+++ b/src/app/pages/rover-by-openstax/sections/lms.html
@@ -4,7 +4,7 @@
             <h2>{model.heading}</h2>
             <div class="tagline" data-html="description"></div>
         </div>
-        <img src="{model.image.image}" alt="{model.image.altText}">
+        <img class="card" src="{model.image.image}" alt="{model.image.altText}">
         <div class="caption">{model.caption}</div>
     </div>
     <div class="bottom-border"></div>
