Publish new rover and impact pages (#1329)
* Publish new Rover page

* Publish Institutional Partners and new Impact pages

* Remove static descriptions

Descriptions should be in the meta.search_description field in the CMS.

--- a/src/app/pages/rover-by-openstax/sections/banner.scss
+++ b/src/app/pages/rover-by-openstax/sections/banner.scss
@@ -1,6 +1,8 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-.rover-redesign #banner {
+.rover-by-openstax #banner {
+    padding: calc(11vw + 5.4rem) 0;
+
     picture,
     picture img {
         max-width: 100%;
