--- a/src/app/pages/rover-by-openstax/sections/faq.scss
+++ b/src/app/pages/rover-by-openstax/sections/faq.scss
@@ -1,8 +1,8 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-.rover-redesign #faq {
+.rover-by-openstax #faq {
     .top-border {
-        background-image: url('/images/rover-redesign/bg-7.svg');
+        background-image: url('/images/rover-by-openstax/bg-7.svg');
         height: calc(6rem + 11vw);
         margin-top: calc(-15.9rem - 11vw);
     }
@@ -15,7 +15,6 @@
     }
 
     .indicator {
-        float: right;
         font-size: 1.4rem;
         margin-right: 2rem;
         margin-top: 0.5rem;
@@ -27,10 +26,13 @@
     }
 
     .question {
+        display: grid;
         font-weight: bold;
+        grid-template-columns: 1fr auto;
     }
 
     .answer {
+        margin-right: 4rem;
         max-height: 25rem;
         max-width: $text-content-max;
         transition: all 0.3s;
