Limit size of image in Getting Started on Rover page

--- a/src/app/pages/rover-by-openstax/sections/getting-started.scss
+++ b/src/app/pages/rover-by-openstax/sections/getting-started.scss
@@ -30,7 +30,7 @@
         }
 
         @include wider-than($tablet-max) {
-            grid-template-columns: auto auto;
+            grid-template-columns: minmax(auto, 67%) auto;
         }
 
         > div > * {
