Allow HTML in impact page descriptions

--- a/src/app/pages/impact/section/lookingAhead.html
+++ b/src/app/pages/impact/section/lookingAhead.html
@@ -2,7 +2,7 @@
     <div class="text-left-photo-right">
         <div class="text-block">
             <h2>{model.heading}</h2>
-            <div>{model.description}</div>
+            <div data-html="description"></div>
         </div>
         <img src="{model.image.image}" alt="{model.image.altText}">
     </div>
