--- a/src/app/pages/impact/section/sustainability.html
+++ b/src/app/pages/impact/section/sustainability.html
@@ -1,7 +1,7 @@
 <template args="model">
     <div class="text-content">
         <h2>{model.heading}</h2>
-        <div>{model.description}</div>
+        <div data-html="description"></div>
     </div>
     <div class="scroll-on-mobile">
         <div class="icon-row">
