--- a/src/app/pages/impact/impact.scss
+++ b/src/app/pages/impact/impact.scss
@@ -163,7 +163,7 @@ $light: #f8f8f8;
         min-width: 90rem;
 
         > img {
-            max-height: 100%;
+            max-height: 4rem;
         }
     }
 
