--- a/src/app/pages/rover-by-openstax/sections/video.scss
+++ b/src/app/pages/rover-by-openstax/sections/video.scss
@@ -7,7 +7,7 @@
 
         @include wider-than($tablet-max) {
             grid-gap: 8rem;
-            grid-template-columns: auto auto;
+            grid-template-columns: auto minmax(auto, 67%);
             justify-content: center;
         }
 
